--- a/jwt_authority_simple/RecommendedUse/pom.xml
+++ b/jwt_authority_simple/RecommendedUse/pom.xml
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>io.github.jefferyeven</groupId>
             <artifactId>jwt_authority</artifactId>
-            <version>1.0.5-SNAPSHOT</version>
+            <version>1.1.0</version>
         </dependency>
     </dependencies>
 
